--- a/src/sth-select.css
+++ b/src/sth-select.css
@@ -14,11 +14,19 @@
  * Popup
  *******************************/
 .sth-select-popup {
+	background-color: white;
+	
 	bottom: 0;
 	height: 0;
 	left: 0;
 	position: fixed;
 	width: 100%;
+}
+
+.sth-select-popup .sth-select-content {
+	cursor: pointer;
+	max-height: 100%;
+	overflow-y: auto;
 }
 
 .sth-select-popup .sth-select-title {
