--- a/src/sth-select.css
+++ b/src/sth-select.css
@@ -6,8 +6,31 @@
  * Field
  *******************************/
 .sth-select {
-	border: 1px solid black;
+	border: 1px solid #a0a0a0;
+	color: #353535;
 	display: inline-block;
+	padding: 5px;
+
+	-webkit-border-radius: 5px;
+	   -moz-border-radius: 5px;
+	        border-radius: 5px;
+}
+
+.sth-select.fixed-width { 
+	width: 100%;
+}
+
+.sth-select .sth-select-text {
+	width: calc(100% - 15px);
+}
+
+.sth-select .sth-select-arrow {
+	float: right;
+}
+
+.sth-select .sth-select-arrow::before {
+	content: "\25bc";
+	font-size: .65em;
 }
 
 /*******************************
@@ -30,7 +53,7 @@
 }
 
 .sth-select-popup .sth-select-title {
-	background-color: orange;
+	background-color: #d2d2d2;
 	font-size: 22px;
 	height: 60px;
 	padding: 15px;
