(1) Added viewport properties; (2) Removed highlight color applied to mobile devices on touch

--- a/src/less/_popup.less
+++ b/src/less/_popup.less
@@ -10,6 +10,8 @@
 	position: fixed;
 	width: 100%;
 
+	-webkit-tap-highlight-color: transparent;
+
 	.sth-select-content {
 		cursor: pointer;
 		max-height: 100%;
