--- a/src/less/_field.less
+++ b/src/less/_field.less
@@ -3,7 +3,7 @@
  * Applies box-sizing property only on elements that 
  * makes part of sth-select component.
  */
-[class^="sth-select-"] {
+[class^="sth-select"] {
 	box-sizing: border-box;
 }
 
@@ -13,12 +13,17 @@
 .sth-select {
 	border: 1px solid #a0a0a0;
 	color: #353535;
+	cursor: pointer;
 	display: inline-block;
 	padding: 5px;
 
 	-webkit-border-radius: 5px;
 	   -moz-border-radius: 5px;
 	        border-radius: 5px;
+
+	* { 
+		cursor: pointer; 
+	}
 
 	&.fixed-width {
 		width: 100%;
