--- a/src/less/_popup.less
+++ b/src/less/_popup.less
@@ -20,14 +20,15 @@
 
 	.sth-select-title {
 		background-color: #d2d2d2;
-		font-size: 22px;
-		height: 60px;
-		padding: 15px;
+		font-size: 1.2em;
+		height: 50px;
+		line-height: 50px;
+		padding: 0 10px;
 	}
 
 	.sth-select-item {
 		border-bottom: 1px solid #d2d2d2;
-		font-size: 16px;
+		font-size: 1em;
 		height: 44px;
 		padding: 12px 15px;
 	}
