Commiting some broken things

--- a/example/css/example.css
+++ b/example/css/example.css
@@ -89,6 +89,10 @@ label {
 	margin-bottom: 8px;
 }
 
+.row {
+	padding: 15px 0;
+}
+
 /***********************
  * Footer
  ***********************/
