--- a/src/less/_popup.less
+++ b/src/less/_popup.less
@@ -26,6 +26,15 @@
 		padding: 0 10px;
 	}
 
+	.sth-select-filter {
+		border: none;
+		border-bottom: 1px solid #d2d2d2;
+		height: 44px;
+		padding: 5px 10px;
+		font-size: 1em;
+		width: 100%;
+	}
+
 	.sth-select-item {
 		border-bottom: 1px solid #d2d2d2;
 		font-size: 1em;
