Added close button to the popup's title

--- a/src/less/_popup.less
+++ b/src/less/_popup.less
@@ -26,6 +26,16 @@
 		padding: 0 10px;
 	}
 
+	.sth-select-title-close {
+		display: inline-block;
+		cursor: pointer;
+		height: 50px;
+		position: absolute;
+		right: 0;
+		text-align: center;
+		width: 50px;
+	}
+
 	.sth-select-filter {
 		border: none;
 		border-bottom: 1px solid #d2d2d2;
