Add padding to content to show last items

--- a/src/less/_popup.less
+++ b/src/less/_popup.less
@@ -3,7 +3,7 @@
  *******************************/
 .sth-select-popup {
 	background-color: white;
-	
+
 	bottom: 0;
 	height: 0;
 	left: 0;
@@ -16,6 +16,7 @@
 		cursor: pointer;
 		max-height: 100%;
 		overflow-y: auto;
+		padding-bottom: 50px;
 	}
 
 	.sth-select-title {
